--- a/scss/_middle.scss
+++ b/scss/_middle.scss
@@ -2,10 +2,10 @@
     font-size: 36px;
     color: #8a82cc;
 }
-.clock {
-    height: 18px;
-    width: 18px;
-}
 .phone {
     margin-left: 2px;
 }
+.card-img-top{
+    height: 160px;
+}
+
